# milton

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  config.yaml
include/: Config.hpp
scripts/: build.sh  conan_install.sh  run.sh
src/: CMakeLists.txt  Config.cpp  Config.hpp  Console.hpp  color_info_sorted_2d.ipp  main.cpp
